add threshold link to home page

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <li> <a href="./songs/Super Mario (simple version).html"> Super Mario NES Theme (simple version) </a> </li>
     <li> <a href="./songs/Super Mario.html"> Super Mario NES Theme (with chords) </a> </li>
     <li> <a href="./songs/Zelda Lullaby.html"> Zelda's Lullaby (Ocarina of Time) </a> </li>
+    <li> <a href="./songs/Threshold.html"> Threshold (Journey) </a> </li>
   </ul>
 
   <h2> Pop </h2>
