--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <li> <a href="./songs/Yesterday.html"> Yesterday (The Beatles)</a> </li>
     <li> <a href="./songs/Yellow Submarine.html"> Yellow Submarine (The Beatles)</a> </li>
     <li> <a href="./songs/Eleanor Rigby.html"> Eleanor Rigby (The Beatles)</a> </li>
+    <li> <a href="./songs/With a little help from my friends.html">With a little help from my friends (The Beatles)</a> </li>
   </ul>
 
   <h2> Traditional </h2>
