--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
     <li> <a href="./songs/Yellow Submarine.html"> Yellow Submarine (The Beatles)</a> </li>
     <li> <a href="./songs/Eleanor Rigby.html"> Eleanor Rigby (The Beatles)</a> </li>
     <li> <a href="./songs/With a little help from my friends.html">With a little help from my friends (The Beatles)</a> </li>
+    <li> <a href="./songs/Island in the Sun.html">Island in the Sun (Weezer)</a> </li>
+  
   </ul>
 
   <h2> Traditional </h2>
