--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
   <h2> Traditional </h2>
   <ul>
      <li> <a href="./songs/Amazing Grace.html"> Amazing Grace (John Newton)</a> </li>
+    <li> <a href="./songs/American folk songs.html"> American folk songs</a> </li>
   </ul>
 
   <h2> Classical </h2>
