--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     <li> <a href="./songs/Eleanor Rigby.html"> Eleanor Rigby (The Beatles)</a> </li>
     <li> <a href="./songs/With a little help from my friends.html">With a little help from my friends (The Beatles)</a> </li>
     <li> <a href="./songs/Island in the Sun.html">Island in the Sun (Weezer)</a> </li> 
+    <li> <a href="./songs/Take on me.html">Take on me (A-Ah)</a> </li> 
   </ul>
 
   <h2> Traditional </h2>
