--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <li> <a href="./songs/With a little help from my friends.html">With a little help from my friends (The Beatles)</a> </li>
     <li> <a href="./songs/Island in the Sun.html">Island in the Sun (Weezer)</a> </li> 
     <li> <a href="./songs/Take on me.html">Take on me (A-Ah)</a> </li> 
-    <li> <a href="./songs/Last_Christmas.html">Last Christmas</a> </li> 
+    <li> <a href="./songs/Last_Christmas.html">Last Christmas (first verse)</a> </li> 
   </ul>
 
   <h2> Traditional </h2>
