--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <li> <a href="./songs/Love_Like_You.html"> Love Like You (transcribed by Nezara) </a> </li>
     <li> <a href="./songs/Superstition.html"> Superstition (transcribed by Nezara) </a> </li>
     <li> <a href="./songs/Mitsuhas_Theme_Kimi_No_Na_wa.html"> Mitsuha's Theme - Kimi No Na wa (transcribed by Peri) </a> </li>
+    <li> <a href="./songs/graduation_photo.html"> Graduation Photo </a> </li>
 
   </ul>
 
@@ -113,6 +114,7 @@
   <li> Nezara </li>
   <li> Peri </li>
   <li> mimizan </li>
+  <li> redleaf29 </li>
 </ul>
 
   <p class="home-page"> You can contribute here: <a href="https://github.com/sky-music/sky-music.github.io"> Sky Music on Github</a>.</p>
