--- a/songs/graduation_photo.html
+++ b/songs/graduation_photo.html
@@ -14,8 +14,10 @@
     </tr>
   </table>
 
-<img src="graduation_photo_1.tiff" width="auto" height="auto" />
-<img src="graduation_photo_2.tiff" width="auto" height="auto" />
+  <p>
+<img src="graduation_photo_1.tiff" alt="Graduation Photo sheet 1"/>
+<img src="graduation_photo_2.tiff" alt="Graduation Photo sheet 1" />
+  </p>
 
 </body>
 </html>
