--- a/songs/c418_sweden.html
+++ b/songs/c418_sweden.html
@@ -13,7 +13,9 @@
   </tr>
 </table>
 
-<img src="c418_sweden.png" width="auto" height="auto" />
+  <p>
+<img src="c418_sweden.png" alt="Sweden music sheet" width="auto" height="auto" />
+  </p>
 
 </body>
 </html>
