--- a/songs/c418_sweden.html
+++ b/songs/c418_sweden.html
@@ -14,7 +14,7 @@
 </table>
 
   <p>
-<img src="c418_sweden.png" alt="Sweden music sheet" width="auto" height="auto" />
+<img src="c418_sweden.png" alt="Sweden music sheet" />
   </p>
 
 </body>
