--- a/songs/illusionary_daytime_pan_flute.html
+++ b/songs/illusionary_daytime_pan_flute.html
@@ -414,6 +414,18 @@ svg rect.note-background {
 </style>
 <meta charset="utf-8"/></head>
 <body>
+		
+<table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../images/sky-music-logo.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
+	
 <h1> Illusionary Daytime Pan Flute </h1>
 <p> <b>Original Artist(s):</b> Shirfine </p>
 <p> <b>Transcript:</b> Tracey </p>
