--- a/songs/illusionary_daytime_pan_flute_v1.html
+++ b/songs/illusionary_daytime_pan_flute_v1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:svg="http://www.w3.org/2000/svg">
 <head>
-<title>Illusionary Daytime Pan Flute</title>
+<title>Illusionary Daytime Pan Flute v1</title>
 <style type="text/css">
 html {
   scroll-behavior: smooth;
@@ -426,7 +426,7 @@ svg rect.note-background {
     </tr>
   </table>
 	
-<h1> Illusionary Daytime Pan Flute </h1>
+<h1> Illusionary Daytime Pan Flute v1 </h1>
 <p> <b>Original Artist(s):</b> Shirfine </p>
 <p> <b>Transcript:</b> Tracey </p>
 <p> <b>Musical key:</b> Bb </p>
