--- a/songs/illusionary_daytime_pan_flute_v2.html
+++ b/songs/illusionary_daytime_pan_flute_v2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:svg="http://www.w3.org/2000/svg">
 <head>
-<title>illusionary_daytime_flute_v2</title>
+<title>Illusionary Daytime Flute v2</title>
 <style type="text/css">
 html {
   scroll-behavior: smooth;
