--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <li> <a href="./songs/Mitsuhas_Theme_Kimi_No_Na_wa.html"> Mitsuha's Theme - Kimi No Na wa (transcribed by Peri) </a> </li>
     <li> <a href="./songs/graduation_photo.html"> Graduation Photo </a> </li>
     <li> <a href="./illusionary_daytime_pan_flute_v1.html"> Illusionary Daytime Flute v1 </a> </li>
+    <li> <a href="./illusionary_daytime_pan_flute_v2.html"> Illusionary Daytime Flute v2 </a> </li>
 
   </ul>
 
