add illusionary daytime v3

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <li> <a href="./songs/graduation_photo.html"> Graduation Photo </a> </li>
     <li> <a href="./songs/illusionary_daytime_pan_flute_v1.html"> Illusionary Daytime Flute v1 </a> </li>
     <li> <a href="./songs/illusionary_daytime_pan_flute_v2.html"> Illusionary Daytime Flute v2 </a> </li>
+    <li> <a href="./songs/illusionary_daytime_pan_flute_v3.html"> Illusionary Daytime Flute v3 </a> </li>
 
   </ul>
 
