--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <li> <a href="./songs/Super Mario.html"> Super Mario NES Theme (with chords) </a> </li>
     <li> <a href="./songs/Zelda Lullaby.html"> Zelda's Lullaby (Ocarina of Time) </a> </li>
     <li> <a href="./songs/Threshold.html"> Threshold (Journey) </a> </li>
+    <li> <a href="./songs/Dearly Beloved.html"> Dearly Beloved (Kingdom Hearts) </a> </li>
   </ul>
 
   <h2> Pop </h2>
