--- a/songs/Dearly Beloved.html
+++ b/songs/Dearly Beloved.html
@@ -2,6 +2,18 @@
 <html xmlns:svg="http://www.w3.org/2000/svg">
 <head>
 <title>Dearly Beloved</title>
+
+<table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../images/sky-music-logo.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
+
 <style type="text/css">
 html {
   scroll-behavior: smooth;
