--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     <li> <a href="./songs/Take on me.html">Take on me (A-Ah)</a> </li> 
     <li> <a href="./songs/Last_Christmas.html">Last Christmas (first verse)</a> </li>
     <li> <a href="./songs/Kaze wo atsumete.html">Kaze wo atsumete (Happy End, 1971)</a> </li> 
+    <li> <a href="./songs/Young Dumb and Broke.html"> Young Dumb & Broke (Khalid) </a> </li>
   </ul>
 
   <h2> Traditional </h2>
@@ -117,6 +118,7 @@
   <li> Peri </li>
   <li> mimizan </li>
   <li> redleaf29 </li>
+  <li> Tarhiel </li>
 </ul>
 
   <p class="home-page"> You can contribute here: <a href="https://github.com/sky-music/sky-music.github.io"> Sky Music on Github</a>.</p>
