--- a/songs/Godfather_Theme_Speak_Softly_Love.html
+++ b/songs/Godfather_Theme_Speak_Softly_Love.html
@@ -414,10 +414,22 @@ svg rect.note-background {
 </style>
 <meta charset="utf-8"/></head>
 <body>
+	<table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../images/sky-music-logo.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
 <h1> Godfather Theme (Speak Softly, Love) </h1>
 <p> <b>Original Artist(s):</b> Nino Rota </p>
-<p> <b>Transcript:</b>  </p>
+<p> <b>Transcript:</b> Fiqo and Pod </p>
 <p> <b>Musical key:</b>  </p>
+	
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/ce6iYOjz5L0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <div id="transcript">
 
 <hr />
