--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
     <li> <a href="./songs/Mitsuhas_Theme_Kimi_No_Na_wa.html"> Mitsuha's Theme - Kimi No Na wa (transcribed by Peri) </a> </li>
     <li> <a href="./songs/graduation_photo.html"> Graduation Photo </a> </li>
     <li> <a href="./songs/illusionary_daytime_flute.html"> Illusionary Daytime Flute </a> </li>
+    <li> <a href="./songs/Cant_Help_Falling_in_Love_Intro.html"> Can't Help Falling in Love (Intro) </a> </li>
+    <li> <a href="./songs/Davy_Jones_Theme.html"> Davy Jones Theme </a> </li>
+    <li> <a href="./songs/Godfather_Theme_Speak_Softly_Love.html"> Godfather Theme - Speak Softly Love </a> </li>
+    <li> <a href="./songs/Harry_Potter_-_Hedwigs_Theme.html"> Harry Potter - Hedwig's Theme </a> </li>
 
   </ul>
 
@@ -81,6 +85,7 @@
      <li> <a href="./songs/Ode to Joy.html"> Ode to Joy (Beethoven)</a> </li>
     <li> <a href="./songs/Fur Elise.html"> Für Elise (Beethoven)</a> </li>
     <li> <a href="./songs/Brahms Lullaby.html"> Lullaby (Brahms)</a> </li>
+    <li> <a href="./songs/Clair_de_Lune_-_Debussy.html"> Clair de Lune - Debussy </a> </li>
   </ul>
 
   <h2> Older style Music Sheets </h2>
@@ -119,6 +124,7 @@
   <li> mimizan </li>
   <li> redleaf29 </li>
   <li> Tarhiel </li>
+  <li> Pod </li>
 </ul>
 
   <p class="home-page"> You can contribute here: <a href="https://github.com/sky-music/sky-music.github.io"> Sky Music on Github</a>.</p>
