--- a/songs/Always_with_Me_-_Spirited_Away_-_Ghibli.html
+++ b/songs/Always_with_Me_-_Spirited_Away_-_Ghibli.html
@@ -428,6 +428,8 @@ svg rect.note-background {
 <p> <b>Original Artist(s):</b>  </p>
 <p> <b>Transcript:</b> Fiqo and Pod </p>
 <p> <b>Musical key:</b>  </p>
+	<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/KSbL7mwxJs0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	
 <div id="transcript">
 
 <hr />
