--- a/songs/Somewhere_Over_the_Rainbow.html
+++ b/songs/Somewhere_Over_the_Rainbow.html
@@ -414,10 +414,21 @@ svg rect.note-background {
 </style>
 <meta charset="utf-8"/></head>
 <body>
+	<table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../images/sky-music-logo.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
 <h1> Somewhere Over the Rainbow </h1>
-<p> <b>Original Artist(s):</b>  </p>
+<p> <b>Original Artist(s):</b> Fox Mask and Pod </p>
 <p> <b>Transcript:</b>  </p>
 <p> <b>Musical key:</b>  </p>
+	<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/z5-CWNDjpZw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <div id="transcript">
 
 <hr />
