--- a/index.html
+++ b/index.html
@@ -44,13 +44,10 @@
     <li> <a href="./songs/illusionary_daytime_flute.html"> Illusionary Daytime Flute </a> </li>
     <li> <a href="./songs/Cant_Help_Falling_in_Love_Intro.html"> Can't Help Falling in Love (Intro) </a> </li>
     <li> <a href="./songs/Davy_Jones_Theme.html"> Davy Jones Theme </a> </li>
-    <li> <a href="./songs/Godfather_Theme_Speak_Softly_Love.html"> Godfather Theme - Speak Softly Love </a> </li>
-    <li> <a href="./songs/Harry_Potter_-_Hedwigs_Theme.html"> Harry Potter - Hedwig's Theme </a> </li>
-    <li> <a href="./songs/Clair_de_Lune_-_Debussy.html"> Clair de Lune - Debussy </a> </li>
 
   </ul>
 
-  <h2> Video Games </h2>
+  <h2> Video Games </h2>
   <ul>
     <li> <a href="./songs/Song_Of_Storms.html"> Song of Storms - Legend of Zelda </a> </li>
     <li> <a href="./songs/c418_sweden.html"> Sweden (Minecraft) - C418 </a> </li>
@@ -60,6 +57,13 @@
     <li> <a href="./songs/Threshold.html"> Threshold (Journey) </a> </li>
     <li> <a href="./songs/Dearly Beloved.html"> Dearly Beloved (Kingdom Hearts) </a> </li>
   </ul>
+  
+  <h2>Movies/TV Shows </h2>
+  
+    <li> <a href="./songs/Godfather_Theme_Speak_Softly_Love.html"> Godfather Theme - Speak Softly Love </a> </li>
+    <li> <a href="./songs/Harry_Potter_-_Hedwigs_Theme.html"> Harry Potter - Hedwig's Theme (Advanced) </a> </li>
+    <li> <a href="./songs/Always_with_Me_-_Spirited_Away_-_Ghibli.html"> Always With Me - Spirited Away </a> </li>
+    <li> <a href="./songs/Somewhere_Over_the_Rainbow.html"> Somewhere Over the Rainbow (Advanced) </a> </li>
 
   <h2> Pop </h2>
   <ul>
@@ -86,6 +90,7 @@
      <li> <a href="./songs/Ode to Joy.html"> Ode to Joy (Beethoven)</a> </li>
     <li> <a href="./songs/Fur Elise.html"> Für Elise (Beethoven)</a> </li>
     <li> <a href="./songs/Brahms Lullaby.html"> Lullaby (Brahms)</a> </li>
+    <li> <a href="./songs/Clair_de_Lune_-_Debussy.html"> Clair de Lune - Debussy </a> </li>
   </ul>
 
   <h2> Older style Music Sheets </h2>
