--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   </ul>
 
-  <h2> Video Games </h2>
+  <h2> Video Games </h2>
   <ul>
     <li> <a href="./songs/Song_Of_Storms.html"> Song of Storms - Legend of Zelda </a> </li>
     <li> <a href="./songs/c418_sweden.html"> Sweden (Minecraft) - C418 </a> </li>
@@ -54,8 +54,9 @@
     <li> <a href="./songs/Dearly Beloved.html"> Dearly Beloved (Kingdom Hearts) </a> </li>
   </ul>
   
-  <h2>Film/TV Shows </h2>
+  <h2>Film/TV Shows </h2>
   
+  <ul>
     <li> <a href="./songs/Godfather_Theme_Speak_Softly_Love.html"> Godfather Theme - Speak Softly Love </a> </li>
     <li> <a href="./songs/Harry_Potter_-_Hedwigs_Theme.html"> Harry Potter - Hedwig's Theme (Advanced) </a> </li>
     <li> <a href="./songs/Always_with_Me_-_Spirited_Away_-_Ghibli.html"> Always With Me - Spirited Away </a> </li>
@@ -64,6 +65,7 @@
     <li> <a href="./songs/Dango_daikazoku.html"> Dango daikazoku - Kyoto Animation </a> </li>
     <li> <a href="./songs/Shiny.html"> Shiny (Moana) </a> </li>
     <li> <a href="./songs/Davy_Jones_Theme.html"> Davy Jones Theme </a> </li>
+  </ul>
 
   <h2> Pop </h2>
   <ul>
