Add about paragraph

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
       </td>
     </tr>
   </table>
+  
+  <p>This is a collection of fan-made visual music sheets for <a href="https://thatskygame.com">Sky: Children of the Light</a>.</p>
 
   <h2> Music Sheets </h2>
 
