--- a/songs/Binary_Sunset_-_Star_Wars.html
+++ b/songs/Binary_Sunset_-_Star_Wars.html
@@ -414,6 +414,16 @@ svg rect.note-background {
 </style>
 <meta charset="utf-8"/></head>
 <body>
+	<table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../images/sky-music-logo.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
 <h1> Binary Sunset - Star Wars </h1>
 <p> <b>Original Artist(s):</b> John Williams </p>
 <p> <b>Transcript:</b> Hebi Ire and Pod </p>
