--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
     <li> <a href="./songs/Dango_daikazoku.html"> Dango daikazoku - Kyoto Animation </a> </li>
     <li> <a href="./songs/Shiny.html"> Shiny (Moana) </a> </li>
     <li> <a href="./songs/Davy_Jones_Theme.html"> Davy Jones Theme </a> </li>
+    <li> <a href="./songs/Binary_Sunset_-_Star_Wars.html"> Binary Sunset - Star Wars </a> </li>
+    <li> <a href="./songs/Little_Boxes.html"> Little Boxes - Weeds </a> </li>
   </ul>
 
   <h2> Pop </h2>
