--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <li> <a href="./songs/graduation_photo.html"> Graduation Photo </a> </li>
     <li> <a href="./songs/illusionary_daytime_flute.html"> Illusionary Daytime Flute </a> </li>
     <li> <a href="./songs/Cant_Help_Falling_in_Love_Intro.html"> Can't Help Falling in Love (Intro) </a> </li>
+    <li> <a href="./songs/Hallelujah.html"> Hallelujah </a> </li>
 
   </ul>
 
