--- a/songs/Carol-of-the-Bells.html
+++ b/songs/Carol-of-the-Bells.html
@@ -414,11 +414,24 @@ svg rect.note-background {
 </style>
 <meta charset="utf-8"/></head>
 <body>
+	<table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../images/sky-music-logo.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
 <h1> Carol of the Bells </h1>
 <p> <b>Original Artist(s):</b>  Mykola Leontovych </p>
 <p> <b>Transcript:</b> avxnnya </p>
 <p> <b>Musical key:</b>  </p>
 <div id="transcript">
+
+<blockquote class="reddit-card" data-card-created="1588847089"><a href="https://www.reddit.com/r/SkyGame/comments/cq152f/carol_of_the_bells_tutorial/">Carol of the bells (tutorial)</a> from <a href="http://www.reddit.com/r/SkyGame">r/SkyGame</a></blockquote>
+<script async src="//embed.redditmedia.com/widgets/platform.js" charset="UTF-8"></script>
 
 <hr />
 <table class="harp harp-0 "><tr><td>
