--- a/songs/Kiss-the-Rain.html
+++ b/songs/Kiss-the-Rain.html
@@ -414,10 +414,23 @@ svg rect.note-background {
 </style>
 <meta charset="utf-8"/></head>
 <body>
+	<table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../images/sky-music-logo.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
 <h1> Kiss the Rain </h1>
 <p> <b>Original Artist(s):</b> Yiruma </p>
 <p> <b>Transcript:</b> Fiqo Mendez and justmeandmysalmon </p>
 <p> <b>Musical key:</b>  </p>
+<div id="transcript">
+
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/u0SPgQ3iwxM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <div id="transcript">
 
 <hr />
