--- a/songs/My-Heart-Will-Go-On-Titanic-Theme.html
+++ b/songs/My-Heart-Will-Go-On-Titanic-Theme.html
@@ -414,11 +414,26 @@ svg rect.note-background {
 </style>
 <meta charset="utf-8"/></head>
 <body>
+	<table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../images/sky-music-logo.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
 <h1> My Heart Will Go On - Titanic Theme </h1>
 <p> <b>Original Artist(s):</b> Celine Dion </p>
 <p> <b>Transcript:</b> Rootlesstree </p>
 <p> <b>Musical key:</b>  </p>
 <div id="transcript">
+
+
+  <iframe src="//player.bilibili.com/player.html?aid=667580831&bvid=BV1Ja4y1t7Pr&cid=172508513&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+
+
 
 <hr />
 <table class="harp harp-0 "><tr><td>
