--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
     <li> <a href="./songs/illusionary_daytime_flute.html"> Illusionary Daytime Flute </a> </li>
     <li> <a href="./songs/Cant_Help_Falling_in_Love_Intro.html"> Can't Help Falling in Love (Intro) </a> </li>
     <li> <a href="./songs/Hallelujah.html"> Hallelujah </a> </li>
+    <li> <a href="./songs/You-are-my-sunshine.html"> You are my Sunshine </a> </li>
+    <li> <a href="./songs/kiss-the-rain.html"> Kiss the Rain </a> </li>
 
   </ul>
 
@@ -55,6 +57,7 @@
     <li> <a href="./songs/Zelda Lullaby.html"> Zelda's Lullaby (Ocarina of Time) </a> </li>
     <li> <a href="./songs/Threshold.html"> Threshold (Journey) </a> </li>
     <li> <a href="./songs/Dearly Beloved.html"> Dearly Beloved (Kingdom Hearts) </a> </li>
+    <li> <a href="./songs/Pokemon-Center-Theme.html"> Pokemon Center Theme </a> </li>
   </ul>
   
   <h2>Film/TV Shows </h2>
@@ -70,6 +73,8 @@
     <li> <a href="./songs/Davy_Jones_Theme.html"> Davy Jones Theme </a> </li>
     <li> <a href="./songs/Binary_Sunset_-_Star_Wars.html"> Binary Sunset - Star Wars </a> </li>
     <li> <a href="./songs/Little_Boxes.html"> Little Boxes - Weeds </a> </li>
+    <li> <a href="./songs/Do-Re-Mi-Sound-Of-Music.html"> Do-Re-Mi - The Sound of Music </a> </li>
+    <li> <a href="./songs/My-Heart-will-go-on-Titanic-Theme.html"> My Heart Will Go On - Titanic Theme </a> </li>
   </ul>
 
   <h2> Pop </h2>
@@ -98,6 +103,7 @@
     <li> <a href="./songs/Fur Elise.html"> Für Elise (Beethoven)</a> </li>
     <li> <a href="./songs/Brahms Lullaby.html"> Lullaby (Brahms)</a> </li>
     <li> <a href="./songs/Clair_de_Lune_-_Debussy.html"> Clair de Lune - Debussy </a> </li>
+    <li> <a href="./songs/carol-of-the-bells.html"> Carol of the Bells </a> </li>
   </ul>
   
   <hr />
