--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <li> <a href="./songs/illusionary_daytime_flute.html"> Illusionary Daytime Flute </a> </li>
     <li> <a href="./songs/Cant_Help_Falling_in_Love_Intro.html"> Can't Help Falling in Love (Intro) </a> </li>
     <li> <a href="./songs/Hallelujah.html"> Hallelujah </a> </li>
-    <li> <a href="./songs/You-are-my-sunshine.html"> You are my Sunshine </a> </li>
-    <li> <a href="./songs/kiss-the-rain.html"> Kiss the Rain </a> </li>
+    <li> <a href="./songs/You-are-my-Sunshine.html"> You are my Sunshine </a> </li>
+    <li> <a href="./songs/Kiss-the-Rain.html"> Kiss the Rain </a> </li>
 
   </ul>
 
@@ -73,8 +73,8 @@
     <li> <a href="./songs/Davy_Jones_Theme.html"> Davy Jones Theme </a> </li>
     <li> <a href="./songs/Binary_Sunset_-_Star_Wars.html"> Binary Sunset - Star Wars </a> </li>
     <li> <a href="./songs/Little_Boxes.html"> Little Boxes - Weeds </a> </li>
-    <li> <a href="./songs/Do-Re-Mi-Sound-Of-Music.html"> Do-Re-Mi - The Sound of Music </a> </li>
-    <li> <a href="./songs/My-Heart-will-go-on-Titanic-Theme.html"> My Heart Will Go On - Titanic Theme </a> </li>
+    <li> <a href="./songs/Do-Re-Mi-Sound-of-Music.html"> Do-Re-Mi - The Sound of Music </a> </li>
+    <li> <a href="./songs/My-Heart-Will-Go-On-Titanic-Theme.html"> My Heart Will Go On - Titanic Theme </a> </li>
   </ul>
 
   <h2> Pop </h2>
@@ -103,7 +103,7 @@
     <li> <a href="./songs/Fur Elise.html"> Für Elise (Beethoven)</a> </li>
     <li> <a href="./songs/Brahms Lullaby.html"> Lullaby (Brahms)</a> </li>
     <li> <a href="./songs/Clair_de_Lune_-_Debussy.html"> Clair de Lune - Debussy </a> </li>
-    <li> <a href="./songs/carol-of-the-bells.html"> Carol of the Bells </a> </li>
+    <li> <a href="./songs/Carol-of-the-Bells.html"> Carol of the Bells </a> </li>
   </ul>
   
   <hr />
