--- a/songs/You-are-my-Sunshine.html
+++ b/songs/You-are-my-Sunshine.html
@@ -426,7 +426,7 @@ svg rect.note-background {
   </table>
 <h1> You are my Sunshine </h1>
 <p> <b>Original Artist(s):</b>  </p>
-<p> <b>Transcript:</b>  </p>
+<p> <b>Transcript:</b> Jane Sky </p>
 <p> <b>Musical key:</b>  </p>
 <div id="transcript">
 
