--- a/songs/Binary_Sunset_-_Star_Wars.html
+++ b/songs/Binary_Sunset_-_Star_Wars.html
@@ -426,7 +426,7 @@ svg rect.note-background {
   </table>
 <h1> Binary Sunset - Star Wars </h1>
 <p> <b>Original Artist(s):</b> John Williams </p>
-<p> <b>Transcript:</b> Hebi Ire and Pod </p>
+<p> <b>Transcript:</b> Hebi Ire</p>
 <p> <b>Musical key:</b>  </p>
 	<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/o6E5ladBt5Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <div id="transcript">
