--- a/songs/Clair_de_Lune_-_Debussy.html
+++ b/songs/Clair_de_Lune_-_Debussy.html
@@ -426,7 +426,7 @@ svg rect.note-background {
   </table>
 <h1> Clair de Lune - Debussy </h1>
 <p> <b>Original Artist(s):</b>  </p>
-<p> <b>Transcript:</b> イェア and Pod </p>
+<p> <b>Transcript:</b> イェア</p>
 <p> <b>Musical key:</b>  </p>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/bYWIhOvv8Y8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <div id="transcript">
