--- a/songs/Godfather_Theme_Speak_Softly_Love.html
+++ b/songs/Godfather_Theme_Speak_Softly_Love.html
@@ -426,7 +426,7 @@ svg rect.note-background {
   </table>
 <h1> Godfather Theme (Speak Softly, Love) </h1>
 <p> <b>Original Artist(s):</b> Nino Rota </p>
-<p> <b>Transcript:</b> Fiqo and Pod </p>
+<p> <b>Transcript:</b> Fiqo Mendez</p>
 <p> <b>Musical key:</b>  </p>
 	
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/ce6iYOjz5L0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
