--- a/songs/Harry_Potter_-_Hedwigs_Theme.html
+++ b/songs/Harry_Potter_-_Hedwigs_Theme.html
@@ -426,7 +426,7 @@ svg rect.note-background {
   </table>
 <h1> Harry Potter - Hedwigs Theme </h1>
 <p> <b>Original Artist(s):</b>  </p>
-<p> <b>Transcript:</b> thatskyfox and Pod  </p>
+<p> <b>Transcript:</b> thatskyfox </p>
 <p> <b>Musical key:</b>  </p>
 	
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/QY_uyPfkXTg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
