--- a/index.html
+++ b/index.html
@@ -36,58 +36,59 @@
   <h2> Music Sheets </h2>
 
   <ul>
-    <li> <a href="./songs/Love_Like_You.html"> Love Like You (transcribed by Nezara) </a> </li>
-    <li> <a href="./songs/Superstition.html"> Superstition (transcribed by Nezara) </a> </li>
-    <li> <a href="./songs/Mitsuhas_Theme_Kimi_No_Na_wa.html"> Mitsuha's Theme - Kimi No Na wa (transcribed by Peri) </a> </li>
-    <li> <a href="./songs/graduation_photo.html"> Graduation Photo </a> </li>
-    <li> <a href="./songs/illusionary_daytime_flute.html"> Illusionary Daytime Flute </a> </li>
     <li> <a href="./songs/Cant_Help_Falling_in_Love_Intro.html"> Can't Help Falling in Love (Intro) </a> </li>
+    <li> <a href="./songs/graduation_photo.html"> Graduation Photo </a> </li>
     <li> <a href="./songs/Hallelujah.html"> Hallelujah </a> </li>
-    <li> <a href="./songs/You-are-my-Sunshine.html"> You are my Sunshine </a> </li>
+    <li> <a href="./songs/illusionary_daytime_flute.html"> Illusionary Daytime Flute </a> </li>
     <li> <a href="./songs/Kiss-the-Rain.html"> Kiss the Rain </a> </li>
+    <li> <a href="./songs/Love_Like_You.html"> Love Like You (transcribed by Nezara) </a> </li>
+    <li> <a href="./songs/Mitsuhas_Theme_Kimi_No_Na_wa.html"> Mitsuha's Theme - Kimi No Na wa (transcribed by Peri) </a> </li>
+    <li> <a href="./songs/Superstition.html"> Superstition (transcribed by Nezara) </a> </li>
+    <li> <a href="./songs/You-are-my-Sunshine.html"> You are my Sunshine </a> </li>
+
 
   </ul>
 
   <h2> Video Games </h2>
   <ul>
-    <li> <a href="./songs/Song_Of_Storms.html"> Song of Storms - Legend of Zelda </a> </li>
-    <li> <a href="./songs/c418_sweden.html"> Sweden (Minecraft) - C418 </a> </li>
-    <li> <a href="./songs/Super Mario (simple version).html"> Super Mario NES Theme (simple version) </a> </li>
-    <li> <a href="./songs/Super Mario.html"> Super Mario NES Theme (with chords) </a> </li>
-    <li> <a href="./songs/Zelda Lullaby.html"> Zelda's Lullaby (Ocarina of Time) </a> </li>
-    <li> <a href="./songs/Threshold.html"> Threshold (Journey) </a> </li>
     <li> <a href="./songs/Dearly Beloved.html"> Dearly Beloved (Kingdom Hearts) </a> </li>
     <li> <a href="./songs/Pokemon-Center-Theme.html"> Pokemon Center Theme </a> </li>
+    <li> <a href="./songs/Song_Of_Storms.html"> Song of Storms - Legend of Zelda </a> </li>
+    <li> <a href="./songs/Super Mario (simple version).html"> Super Mario NES Theme (simple version) </a> </li>
+    <li> <a href="./songs/Super Mario.html"> Super Mario NES Theme (with chords) </a> </li>
+    <li> <a href="./songs/c418_sweden.html"> Sweden (Minecraft) - C418 </a> </li>
+    <li> <a href="./songs/Threshold.html"> Threshold (Journey) </a> </li>
+    <li> <a href="./songs/Zelda Lullaby.html"> Zelda's Lullaby (Ocarina of Time) </a> </li>
   </ul>
   
   <h2>Film/TV Shows </h2>
   
   <ul>
+    <li> <a href="./songs/Always_with_Me_-_Spirited_Away_-_Ghibli.html"> Always With Me - Spirited Away </a> </li>
+    <li> <a href="./songs/Binary_Sunset_-_Star_Wars.html"> Binary Sunset - Star Wars </a> </li>
+    <li> <a href="./songs/Dango_daikazoku.html"> Dango daikazoku - Kyoto Animation </a> </li>
+    <li> <a href="./songs/Davy_Jones_Theme.html"> Davy Jones Theme - Pirates of the Caribbean </a> </li>
+    <li> <a href="./songs/Do-Re-Mi-Sound-of-Music.html"> Do-Re-Mi - The Sound of Music </a> </li>
     <li> <a href="./songs/Godfather_Theme_Speak_Softly_Love.html"> Godfather Theme - Speak Softly Love </a> </li>
     <li> <a href="./songs/Harry_Potter_-_Hedwigs_Theme.html"> Harry Potter - Hedwig's Theme (Advanced) </a> </li>
-    <li> <a href="./songs/Always_with_Me_-_Spirited_Away_-_Ghibli.html"> Always With Me - Spirited Away </a> </li>
+    <li> <a href="./songs/Little_Boxes.html"> Little Boxes - Weeds </a> </li>
+    <li> <a href="./songs/My-Heart-Will-Go-On-Titanic-Theme.html"> My Heart Will Go On - Titanic Theme </a> </li>
+    <li> <a href="./songs/Shiny.html"> Shiny (Moana) </a> </li>
     <li> <a href="./songs/Somewhere_Over_the_Rainbow.html"> Somewhere Over the Rainbow (Advanced) </a> </li>
     <li> <a href="./songs/sky光遇——穿越时空的思念.html"> 穿越时空的思念 </a> </li>
-    <li> <a href="./songs/Dango_daikazoku.html"> Dango daikazoku - Kyoto Animation </a> </li>
-    <li> <a href="./songs/Shiny.html"> Shiny (Moana) </a> </li>
-    <li> <a href="./songs/Davy_Jones_Theme.html"> Davy Jones Theme </a> </li>
-    <li> <a href="./songs/Binary_Sunset_-_Star_Wars.html"> Binary Sunset - Star Wars </a> </li>
-    <li> <a href="./songs/Little_Boxes.html"> Little Boxes - Weeds </a> </li>
-    <li> <a href="./songs/Do-Re-Mi-Sound-of-Music.html"> Do-Re-Mi - The Sound of Music </a> </li>
-    <li> <a href="./songs/My-Heart-Will-Go-On-Titanic-Theme.html"> My Heart Will Go On - Titanic Theme </a> </li>
   </ul>
 
   <h2> Pop </h2>
   <ul>
-    <li> <a href="./songs/Hey Jude.html"> Hey Jude (The Beatles)</a> </li>
-    <li> <a href="./songs/Yesterday.html"> Yesterday (The Beatles)</a> </li>
-    <li> <a href="./songs/Yellow Submarine.html"> Yellow Submarine (The Beatles)</a> </li>
     <li> <a href="./songs/Eleanor Rigby.html"> Eleanor Rigby (The Beatles)</a> </li>
-    <li> <a href="./songs/With a little help from my friends.html">With a little help from my friends (The Beatles)</a> </li>
-    <li> <a href="./songs/Island in the Sun.html">Island in the Sun (Weezer)</a> </li> 
-    <li> <a href="./songs/Take on me.html">Take on me (A-Ah)</a> </li> 
-    <li> <a href="./songs/Last_Christmas.html">Last Christmas (first verse)</a> </li>
+    <li> <a href="./songs/Hey Jude.html"> Hey Jude (The Beatles)</a> </li>
+    <li> <a href="./songs/Island in the Sun.html">Island in the Sun (Weezer)</a> </li>
     <li> <a href="./songs/Kaze wo atsumete.html">Kaze wo atsumete (Happy End, 1971)</a> </li> 
+    <li> <a href="./songs/Last_Christmas.html">Last Christmas (first verse)</a> </li> 
+    <li> <a href="./songs/Take on me.html">Take on me (A-Ah)</a> </li>
+    <li> <a href="./songs/With a little help from my friends.html">With a little help from my friends (The Beatles)</a> </li> 
+    <li> <a href="./songs/Yellow Submarine.html"> Yellow Submarine (The Beatles)</a> </li>
+    <li> <a href="./songs/Yesterday.html"> Yesterday (The Beatles)</a> </li>
     <li> <a href="./songs/Young Dumb and Broke.html"> Young Dumb & Broke (Khalid) </a> </li>
   </ul>
 
@@ -99,11 +100,11 @@
 
   <h2> Classical </h2>
   <ul>
-     <li> <a href="./songs/Ode to Joy.html"> Ode to Joy (Beethoven)</a> </li>
+    <li> <a href="./songs/Carol-of-the-Bells.html"> Carol of the Bells </a> </li>
+    <li> <a href="./songs/Clair_de_Lune_-_Debussy.html"> Clair de Lune - Debussy </a> </li>
     <li> <a href="./songs/Fur Elise.html"> Für Elise (Beethoven)</a> </li>
     <li> <a href="./songs/Brahms Lullaby.html"> Lullaby (Brahms)</a> </li>
-    <li> <a href="./songs/Clair_de_Lune_-_Debussy.html"> Clair de Lune - Debussy </a> </li>
-    <li> <a href="./songs/Carol-of-the-Bells.html"> Carol of the Bells </a> </li>
+    <li> <a href="./songs/Ode to Joy.html"> Ode to Joy (Beethoven)</a> </li>
   </ul>
   
   <hr />
@@ -111,11 +112,11 @@
   <h2> Older style Music Sheets </h2>
 
   <ul>
-    <li> <a href="./songs/road-of-trials-intro.html"> Road of Trials - Journey OST (Cello Intro) </a> </li>
-    <li> <a href="./songs/i-was-born-for-this.html"> I was Born for This - Journey OST (Strings Intro) </a> </li>
-    <li> <a href="./songs/threshold-bass.html"> Threshold - Journey OST (Bass Intro) </a> </li>
     <li> <a href="./songs/Empty Town.html"> Empty Town – Deltarune Chapter 1 OST </a> </li>
+    <li> <a href="./songs/i-was-born-for-this.html"> I was Born for This - Journey OST (Strings Intro) </a> </li>
     <li> <a href="./songs/journey-theme.html"> Journey Theme — Journey OST </a> </li>
+    <li> <a href="./songs/road-of-trials-intro.html"> Road of Trials - Journey OST (Cello Intro) </a> </li>
+    <li> <a href="./songs/threshold-bass.html"> Threshold - Journey OST (Bass Intro) </a> </li>
 
   </ul>
   
