--- a/songs/Jesu-Joy-of-Mans-Desiring.html
+++ b/songs/Jesu-Joy-of-Mans-Desiring.html
@@ -414,10 +414,23 @@ svg rect.note-background {
 </style>
 <meta charset="utf-8"/></head>
 <body>
+	<table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../images/sky-music-logo.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
 <h1> Jesu, Joy of Man's Desiring </h1>
 <p> <b>Original Artist(s):</b> Johann Sebastian Bach </p>
 <p> <b>Transcript:</b> Planaria </p>
 <p> <b>Musical key:</b>  </p>
+<div id="transcript">
+
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/VcpFiRDvHcw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <div id="transcript">
 
 <hr />
