--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
     <li> <a href="./songs/Carol-of-the-Bells.html"> Carol of the Bells </a> </li>
     <li> <a href="./songs/Clair_de_Lune_-_Debussy.html"> Clair de Lune - Debussy </a> </li>
     <li> <a href="./songs/Fur Elise.html"> Für Elise (Beethoven)</a> </li>
+    <li> <a href="./songs/Jesu-Joy-of-Mans-Desiring.html"> Jesu, Joy of Man's Desiring</a> </li>
     <li> <a href="./songs/Brahms Lullaby.html"> Lullaby (Brahms)</a> </li>
     <li> <a href="./songs/Ode to Joy.html"> Ode to Joy (Beethoven)</a> </li>
   </ul>
