--- a/songs/Scarborough-Fair.html
+++ b/songs/Scarborough-Fair.html
@@ -414,11 +414,23 @@ svg rect.note-background {
 </style>
 <meta charset="utf-8"/></head>
 <body>
+	<table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../images/sky-music-logo.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
 <h1> Scarborough Fair </h1>
 <p> <b>Original Artist(s):</b>  </p>
 <p> <b>Transcript:</b> Mumu Tcy </p>
 <p> <b>Musical key:</b>  </p>
 <div id="transcript">
+
+<iframe src="//player.bilibili.com/player.html?aid=82101320&bvid=BV1ZJ41157ku&cid=140481598&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
 
 <hr />
 <table class="harp harp-0 "><tr><td>
