--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <li> <a href="./songs/Harry_Potter_-_Hedwigs_Theme.html"> Harry Potter - Hedwig's Theme (Advanced) </a> </li>
     <li> <a href="./songs/Little_Boxes.html"> Little Boxes - Weeds </a> </li>
     <li> <a href="./songs/My-Heart-Will-Go-On-Titanic-Theme.html"> My Heart Will Go On - Titanic Theme </a> </li>
-    <li> <a href="./songs/Rugrats_Theme.html"> SRugrats Theme </a> </li>
+    <li> <a href="./songs/Rugrats_Theme.html"> Rugrats Theme </a> </li>
     <li> <a href="./songs/Shiny.html"> Shiny (Moana) </a> </li>
     <li> <a href="./songs/Somewhere_Over_the_Rainbow.html"> Somewhere Over the Rainbow (Advanced) </a> </li>
     <li> <a href="./songs/sky光遇——穿越时空的思念.html"> 穿越时空的思念 </a> </li>
@@ -97,6 +97,7 @@
   <ul>
      <li> <a href="./songs/Amazing Grace.html"> Amazing Grace (John Newton)</a> </li>
     <li> <a href="./songs/American folk songs.html"> American folk songs</a> </li>
+    <li> <a href="./songs/Scarborough-Fair.html"> Scarborough Fair</a> </li>
   </ul>
 
   <h2> Classical </h2>
