--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     <li> <a href="./songs/Godfather_Theme_Speak_Softly_Love.html"> Godfather Theme - Speak Softly Love </a> </li>
     <li> <a href="./songs/Harry_Potter_-_Hedwigs_Theme.html"> Harry Potter - Hedwig's Theme (Advanced) </a> </li>
     <li> <a href="./songs/Little_Boxes.html"> Little Boxes - Weeds </a> </li>
+    <li> <a href="./songs/Married-Life-UP.html"> Married Life - UP </a> </li>
     <li> <a href="./songs/My-Heart-Will-Go-On-Titanic-Theme.html"> My Heart Will Go On - Titanic Theme </a> </li>
     <li> <a href="./songs/Rugrats_Theme.html"> Rugrats Theme </a> </li>
     <li> <a href="./songs/Shiny.html"> Shiny (Moana) </a> </li>
