--- a/songs/Married-Life-UP.html
+++ b/songs/Married-Life-UP.html
@@ -430,7 +430,7 @@ svg rect.note-background {
 <p> <b>Musical key:</b>  </p>
 <div id="transcript">
 
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/3tOM0ldtoBc&t" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/3tOM0ldtoBc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <hr />
 <table class="harp harp-0 "><tr><td>
