--- a/index.html
+++ b/index.html
@@ -60,13 +60,19 @@
     <li> <a href="./songs/Threshold.html"> Threshold (Journey) </a> </li>
     <li> <a href="./songs/Zelda Lullaby.html"> Zelda's Lullaby (Ocarina of Time) </a> </li>
   </ul>
+
+  <h2>Anime </h2>
+
+  <ul>
+    <li> <a href="./songs/Always_with_Me_-_Spirited_Away_-_Ghibli.html"> Always With Me - Spirited Away </a> </li>
+    <li> <a href="./songs/Dango_daikazoku.html"> Dango Daikazoku - Kyoto Animation </a> </li>
+    <li> <a href="./songs/Fly-Me-to-the-Moon.html"> Fly Me to the Moon - Neon Genesis Evangelion</a> </li>
+  </ul>
   
   <h2>Film/TV Shows </h2>
   
   <ul>
-    <li> <a href="./songs/Always_with_Me_-_Spirited_Away_-_Ghibli.html"> Always With Me - Spirited Away </a> </li>
     <li> <a href="./songs/Binary_Sunset_-_Star_Wars.html"> Binary Sunset - Star Wars </a> </li>
-    <li> <a href="./songs/Dango_daikazoku.html"> Dango daikazoku - Kyoto Animation </a> </li>
     <li> <a href="./songs/Davy_Jones_Theme.html"> Davy Jones Theme - Pirates of the Caribbean </a> </li>
     <li> <a href="./songs/Do-Re-Mi-Sound-of-Music.html"> Do-Re-Mi - The Sound of Music </a> </li>
     <li> <a href="./songs/Godfather_Theme_Speak_Softly_Love.html"> Godfather Theme - Speak Softly Love </a> </li>
