--- a/songs/Hokage-Funeral.html
+++ b/songs/Hokage-Funeral.html
@@ -414,11 +414,23 @@ svg rect.note-background {
 </style>
 <meta charset="utf-8"/></head>
 <body>
+	<table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../images/sky-music-logo.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
 <h1> Hokage Funeral </h1>
 <p> <b>Original Artist(s):</b>  </p>
 <p> <b>Transcript:</b> Fox Mask </p>
 <p> <b>Musical key:</b>  </p>
 <div id="transcript">
+	
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/bgLe2GQ6n-g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <hr />
 <table class="harp harp-0 "><tr><td>
