--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     <li> <a href="./songs/Always_with_Me_-_Spirited_Away_-_Ghibli.html"> Always With Me - Spirited Away </a> </li>
     <li> <a href="./songs/Dango_daikazoku.html"> Dango Daikazoku - Kyoto Animation </a> </li>
     <li> <a href="./songs/Fly-Me-to-the-Moon.html"> Fly Me to the Moon - Neon Genesis Evangelion</a> </li>
+    <li> <a href="./songs/Hokage-Funeral.html"> Hokage Funeral - Naruto</a> </li>
   </ul>
   
   <h2>Film/TV Shows </h2>
