--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
     <li> <a href="./songs/illusionary_daytime_flute.html"> Illusionary Daytime Flute </a> </li>
     <li> <a href="./songs/Kiss-the-Rain.html"> Kiss the Rain </a> </li>
     <li> <a href="./songs/Love_Like_You.html"> Love Like You (transcribed by Nezara) </a> </li>
-    <li> <a href="./songs/Mitsuhas_Theme_Kimi_No_Na_wa.html"> Mitsuha's Theme - Kimi No Na wa (transcribed by Peri) </a> </li>
     <li> <a href="./songs/Superstition.html"> Superstition (transcribed by Nezara) </a> </li>
     <li> <a href="./songs/You-are-my-Sunshine.html"> You are my Sunshine </a> </li>
 
@@ -68,6 +67,7 @@
     <li> <a href="./songs/Dango_daikazoku.html"> Dango Daikazoku - Kyoto Animation </a> </li>
     <li> <a href="./songs/Fly-Me-to-the-Moon.html"> Fly Me to the Moon - Neon Genesis Evangelion</a> </li>
     <li> <a href="./songs/Hokage-Funeral.html"> Hokage Funeral - Naruto</a> </li>
+    <li> <a href="./songs/Mitsuhas_Theme_Kimi_No_Na_wa.html"> Mitsuha's Theme - Kimi No Na wa - Your Name (transcribed by Peri) </a> </li>
   </ul>
   
   <h2>Film/TV Shows </h2>
