--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
   </ul>
 
-  <h2> Video Games </h2>
+  <h2> Video Games ビデオゲーム 🎮</h2>
   <ul>
     <li> <a href="./songs/Dearly Beloved.html"> Dearly Beloved (Kingdom Hearts) </a> </li>
     <li> <a href="./songs/Pokemon-Center-Theme.html"> Pokemon Center Theme </a> </li>
@@ -60,7 +60,7 @@
     <li> <a href="./songs/Zelda Lullaby.html"> Zelda's Lullaby (Ocarina of Time) </a> </li>
   </ul>
 
-  <h2>Anime </h2>
+  <h2>Anime アニメ</h2>
 
   <ul>
     <li> <a href="./songs/Always_with_Me_-_Spirited_Away_-_Ghibli.html"> Always With Me - Spirited Away </a> </li>
@@ -71,7 +71,7 @@
     <li> <a href="./songs/sky光遇——穿越时空的思念.html"> 穿越时空的思念 </a> </li>
   </ul>
   
-  <h2>Film/TV Shows </h2>
+  <h2>Film/TV Shows ムービー／テレビ 📽📺</h2>
   
   <ul>
     <li> <a href="./songs/Binary_Sunset_-_Star_Wars.html"> Binary Sunset - Star Wars </a> </li>
@@ -108,7 +108,7 @@
     <li> <a href="./songs/Scarborough-Fair.html"> Scarborough Fair</a> </li>
   </ul>
 
-  <h2> Classical </h2>
+  <h2> Classical クラシック</h2>
   <ul>
     <li> <a href="./songs/Carol-of-the-Bells.html"> Carol of the Bells </a> </li>
     <li> <a href="./songs/Clair_de_Lune_-_Debussy.html"> Clair de Lune - Debussy </a> </li>
