Add some Japanese translations

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://sky-music.github.io">
   <meta property="og:image" content="https://raw.githubusercontent.com/sky-music/sky-music.github.io/master/images/opengraph_image.jpg">
-  <meta property="og:description" content="A fan-made website with visual music sheets for Sky: Children of the Light.">
+  <meta property="og:description" content="A fan-made website with visual music sheets for Sky: Children of the Light / Sky 星を紡ぐ子どもたち">
 
 </head>
 
@@ -39,7 +39,7 @@
     <li> <a href="./songs/Cant_Help_Falling_in_Love_Intro.html"> Can't Help Falling in Love (Intro) </a> </li>
     <li> <a href="./songs/graduation_photo.html"> Graduation Photo </a> </li>
     <li> <a href="./songs/Hallelujah.html"> Hallelujah </a> </li>
-    <li> <a href="./songs/illusionary_daytime_flute.html"> Illusionary Daytime Flute </a> </li>
+    <li> <a href="./songs/illusionary_daytime_flute.html"> Illusionary Daytime 幻昼 Flute </a> </li>
     <li> <a href="./songs/Kiss-the-Rain.html"> Kiss the Rain </a> </li>
     <li> <a href="./songs/Love_Like_You.html"> Love Like You (transcribed by Nezara) </a> </li>
     <li> <a href="./songs/Superstition.html"> Superstition (transcribed by Nezara) </a> </li>
@@ -51,12 +51,12 @@
   <h2> Video Games ビデオゲーム 🎮</h2>
   <ul>
     <li> <a href="./songs/Dearly Beloved.html"> Dearly Beloved (Kingdom Hearts) </a> </li>
-    <li> <a href="./songs/Pokemon-Center-Theme.html"> Pokemon Center Theme </a> </li>
+    <li> <a href="./songs/Pokemon-Center-Theme.html"> Pokemon Center Theme ポケモン </a> </li>
     <li> <a href="./songs/Song_Of_Storms.html"> Song of Storms - Legend of Zelda </a> </li>
-    <li> <a href="./songs/Super Mario (simple version).html"> Super Mario NES Theme (simple version) </a> </li>
-    <li> <a href="./songs/Super Mario.html"> Super Mario NES Theme (with chords) </a> </li>
-    <li> <a href="./songs/c418_sweden.html"> Sweden (Minecraft) - C418 </a> </li>
-    <li> <a href="./songs/Threshold.html"> Threshold (Journey) </a> </li>
+    <li> <a href="./songs/Super Mario (simple version).html"> Super Mario NES Theme (simple version) マリオ </a> </li>
+    <li> <a href="./songs/Super Mario.html"> Super Mario NES Theme (with chords) マリオ </a> </li>
+    <li> <a href="./songs/c418_sweden.html"> Sweden (Minecraft マインクラー) - C418 </a> </li>
+    <li> <a href="./songs/Threshold.html"> Threshold (Journey 風の旅ビト) </a> </li>
     <li> <a href="./songs/Zelda Lullaby.html"> Zelda's Lullaby (Ocarina of Time) </a> </li>
   </ul>
 
@@ -64,10 +64,10 @@
 
   <ul>
     <li> <a href="./songs/Always_with_Me_-_Spirited_Away_-_Ghibli.html"> Always With Me - Spirited Away </a> </li>
-    <li> <a href="./songs/Dango_daikazoku.html"> Dango Daikazoku - Kyoto Animation </a> </li>
+    <li> <a href="./songs/Dango_daikazoku.html"> Dango Daikazoku だんご大家族 - Kyoto Animation 京都アニ </a> </li>
     <li> <a href="./songs/Fly-Me-to-the-Moon.html"> Fly Me to the Moon - Neon Genesis Evangelion</a> </li>
-    <li> <a href="./songs/Hokage-Funeral.html"> Hokage Funeral - Naruto</a> </li>
-    <li> <a href="./songs/Mitsuhas_Theme_Kimi_No_Na_wa.html"> Mitsuha's Theme - Kimi No Na wa - Your Name (transcribed by Peri)</a> </li>
+    <li> <a href="./songs/Hokage-Funeral.html"> Hokage Funeral - Naruto ナルト</a> </li>
+    <li> <a href="./songs/Mitsuhas_Theme_Kimi_No_Na_wa.html"> Mitsuha's Theme - Kimi No Na wa 君の縄 - Your Name (transcribed by Peri)</a> </li>
     <li> <a href="./songs/sky光遇——穿越时空的思念.html"> 穿越时空的思念 </a> </li>
   </ul>
   
