--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </tr>
   </table>
   
-  <p class="home-page">This is a collection of fan-made visual music sheets for <a href="https://thatskygame.com">Sky: Children of the Light</a>.</p>
+  <p class="home-page">This is a collection of fan-made visual music sheets for <a href="https://thatskygame.com">Sky: Children of the Light</a> / Sky 星を紡ぐ子どもたち.</p>
 
   <h2> Music Sheets </h2>
 
