--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <li> <a href="./songs/Song_Of_Storms.html"> Song of Storms - Legend of Zelda </a> </li>
     <li> <a href="./songs/Super Mario (simple version).html"> Super Mario NES Theme (simple version) マリオ </a> </li>
     <li> <a href="./songs/Super Mario.html"> Super Mario NES Theme (with chords) マリオ </a> </li>
-    <li> <a href="./songs/c418_sweden.html"> Sweden (Minecraft マインクラー) - C418 </a> </li>
+    <li> <a href="./songs/c418_sweden.html"> Sweden (Minecraft マインクラフト) - C418 </a> </li>
     <li> <a href="./songs/Threshold.html"> Threshold (Journey 風の旅ビト) </a> </li>
     <li> <a href="./songs/Zelda Lullaby.html"> Zelda's Lullaby (Ocarina of Time) </a> </li>
   </ul>
