--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <li> <a href="./songs/Eleanor Rigby.html"> Eleanor Rigby (The Beatles)</a> </li>
     <li> <a href="./songs/Hey Jude.html"> Hey Jude (The Beatles)</a> </li>
     <li> <a href="./songs/Island in the Sun.html">Island in the Sun (Weezer)</a> </li>
-    <li> <a href="./songs/Kaze wo atsumete.html">Kaze wo atsumete (Happy End, 1971)</a> </li> 
+    <li> <a href="./songs/Kaze wo atsumete.html">Kaze wo atsumete 風を集めて (Happy End, 1971)</a> </li> 
     <li> <a href="./songs/Last_Christmas.html">Last Christmas (first verse)</a> </li> 
     <li> <a href="./songs/Take on me.html">Take on me (A-Ah)</a> </li>
     <li> <a href="./songs/With a little help from my friends.html">With a little help from my friends (The Beatles)</a> </li> 
@@ -112,7 +112,7 @@
   <ul>
     <li> <a href="./songs/Carol-of-the-Bells.html"> Carol of the Bells </a> </li>
     <li> <a href="./songs/Clair_de_Lune_-_Debussy.html"> Clair de Lune - Debussy </a> </li>
-    <li> <a href="./songs/Fur Elise.html"> Für Elise (Beethoven)</a> </li>
+    <li> <a href="./songs/Fur Elise.html"> Für Elise (Beethoven) エリーゼのために</a> </li>
     <li> <a href="./songs/Jesu-Joy-of-Mans-Desiring.html"> Jesu, Joy of Man's Desiring</a> </li>
     <li> <a href="./songs/Brahms Lullaby.html"> Lullaby (Brahms)</a> </li>
     <li> <a href="./songs/Ode to Joy.html"> Ode to Joy (Beethoven)</a> </li>
