--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
   <p class="home-page"> You can contribute here: <a href="https://github.com/sky-music/sky-music.github.io"> Sky Music on Github</a>.</p>
 
-  <p class="home-page"> Made using <a href="https://github.com/sky-music/sky-python-music-sheet-maker"> Sky Python Music Sheet Maker</a>. </p>
+  <p class="home-page"> Made using <a href="https://github.com/sky-music/sky-python-music-sheet-maker"> Sky Python Music Sheet Maker</a> by Tracey and jmmelko. </p>
 
 <h2> Thanks </h2>
 
