--- a/songs/graduation_photo.html
+++ b/songs/graduation_photo.html
@@ -15,8 +15,8 @@
   </table>
 
   <p>
-<img src="graduation_photo_1.tiff" alt="Graduation Photo sheet 1"/>
-<img src="graduation_photo_2.tiff" alt="Graduation Photo sheet 1" />
+<img src="graduation_photo_1.png" alt="Graduation Photo sheet 1"/>
+<img src="graduation_photo_2.png" alt="Graduation Photo sheet 1" />
   </p>
 
 </body>
