--- a/about.html
+++ b/about.html
@@ -1,3 +1,25 @@
+<!DOCTYPE html>
+
+
+<html lang="en-US">
+
+<head profile="http://www.w3.org/2005/10/profile">
+  <link rel="icon"
+      type="image/png"
+      href="https://sky-music.github.io/images/sky-music-logo.png">
+  <title> Sky Music</title>
+  <link href="./css/main.css" rel="stylesheet" />
+  <meta charset="utf-8"/>
+    <meta property="og:title" content="Sky Music">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://sky-music.github.io">
+  <meta property="og:image" content="https://raw.githubusercontent.com/sky-music/sky-music.github.io/master/images/opengraph_image.jpg">
+  <meta property="og:description" content="A fan-made website with visual music sheets for Sky: Children of the Light / Sky 星を紡ぐ子どもたち">
+
+</head>
+
+<body>
+
 <h1>About</h1>
 
 <h2> Website Maintenance Credits</h2>
@@ -29,3 +51,6 @@
 <h2> Thanks </h2>
 
 <p class="home-page"> Design and SVGs thanks to <a href="http://madwurmz.com"> madwurmz</a>.</p>
+  
+  </body>
+</html>
