--- a/about.html
+++ b/about.html
@@ -19,6 +19,17 @@
 </head>
 
 <body>
+  
+    <table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../images/sky-music-logo.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
 
 <h1>About</h1>
 
