Add nav to about page

--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
         <h1><a href="../index.html">Sky Music</a></h1>
       </td>
     </tr>
+    <tr>
+      <td>
+        <h1><a href="../index.html">Home</a></h1>
+      </td>
+      <td>
+        <h1><a href="../about.html">About</a></h1>
+      </td>
+    </tr>
   </table>
   
   <p class="home-page">This is a collection of fan-made visual music sheets for <a href="https://thatskygame.com">Sky: Children of the Light</a> / Sky 星を紡ぐ子どもたち.</p>
