--- a/about.html
+++ b/about.html
@@ -28,6 +28,14 @@
       <td>
         <h1><a href="../index.html">Sky Music</a></h1>
       </td>
+      <tr>
+      <td>
+        <h1><a href="../index.html">Home</a></h1>
+      </td>
+      <td>
+        <h1><a href="../about.html">About</a></h1>
+      </td>
+    </tr>
     </tr>
   </table>
 
